docs/envoy/v1.29.0/_sources/intro/arch_overview/security/external_dep_dataplane_core.rst.txt
External dependencies: ``dataplane_core``
=========================================

.. csv-table::
  :header: Name, Version, Release date, CPE, License
  :widths: 2, 1, 1, 2, 1

  `Abseil <https://abseil.io/>`__, `20230802.1 <https://github.com/abseil/abseil-cpp/releases/tag/20230802.1>`__, 2023-09-18, , `Apache-2.0 <https://github.com/abseil/abseil-cpp/blob/20230802.1/LICENSE>`__
  `BoringSSL <https://github.com/google/boringssl>`__, `45cf810 <https://github.com/google/boringssl/tree/45cf810dbdbd767f09f8cb0b0fcccd342c39041f>`__, 2023-08-28, `cpe:2.3:a:google:boringssl:* <https://nvd.nist.gov/vuln/search/results?form_type=Advanced&results_type=overview&query=cpe%3A2.3%3Aa%3Agoogle%3Aboringssl%3A%2A&search_type=all>`__, `Mixed <https://github.com/google/boringssl/blob/45cf810dbdbd767f09f8cb0b0fcccd342c39041f/LICENSE>`__
  `BoringSSL (FIPS) <https://boringssl.googlesource.com/boringssl/+/master/crypto/fipsmodule/FIPS.md>`__, `fips-20210429 <https://commondatastorage.googleapis.com/chromium-boringssl-fips/boringssl-853ca1ea1168dff08011e5d42d94609cc0ca2e27.tar.xz>`__, 2021-04-29, `cpe:2.3:a:google:boringssl:* <https://nvd.nist.gov/vuln/search/results?form_type=Advanced&results_type=overview&query=cpe%3A2.3%3Aa%3Agoogle%3Aboringssl%3A%2A&search_type=all>`__, 
  `c-ares <https://c-ares.haxx.se/>`__, `1.19.1 <https://github.com/c-ares/c-ares/releases/tag/cares-1_19_1>`__, 2023-05-22, `cpe:2.3:a:c-ares_project:c-ares:* <https://nvd.nist.gov/vuln/search/results?form_type=Advanced&results_type=overview&query=cpe%3A2.3%3Aa%3Ac-ares_project%3Ac-ares%3A%2A&search_type=all>`__, `c-ares <https://github.com/c-ares/c-ares/blob/cares-1_19_1/LICENSE.md>`__
  `fmt <https://fmt.dev>`__, `9.1.0 <https://github.com/fmtlib/fmt/releases/tag/9.1.0>`__, 2022-08-27, `cpe:2.3:a:fmt:fmt:* <https://nvd.nist.gov/vuln/search/results?form_type=Advanced&results_type=overview&query=cpe%3A2.3%3Aa%3Afmt%3Afmt%3A%2A&search_type=all>`__, `fmt <https://github.com/fmtlib/fmt/blob/9.1.0/LICENSE.rst>`__
  `gperftools <https://github.com/gperftools/gperftools>`__, `2.10 <https://github.com/gperftools/gperftools/releases/tag/gperftools-2.10>`__, 2022-05-31, `cpe:2.3:a:gperftools_project:gperftools:* <https://nvd.nist.gov/vuln/search/results?form_type=Advanced&results_type=overview&query=cpe%3A2.3%3Aa%3Agperftools_project%3Agperftools%3A%2A&search_type=all>`__, `BSD-3-Clause <https://github.com/gperftools/gperftools/blob/gperftools-2.10/COPYING>`__
  `gRPC <https://grpc.io>`__, `1.59.3 <https://github.com/grpc/grpc/releases/tag/v1.59.3>`__, 2023-11-17, `cpe:2.3:a:grpc:grpc:* <https://nvd.nist.gov/vuln/search/results?form_type=Advanced&results_type=overview&query=cpe%3A2.3%3Aa%3Agrpc%3Agrpc%3A%2A&search_type=all>`__, `Apache-2.0 <https://github.com/grpc/grpc/blob/v1.59.3/LICENSE>`__
  `libcircllhist <https://github.com/openhistogram/libcircllhist>`__, `39f9db7 <https://github.com/openhistogram/libcircllhist/tree/39f9db724a81ba78f5d037f1cae79c5a07107c8e>`__, 2019-05-21, , `Apache-2.0 <https://github.com/openhistogram/libcircllhist/blob/39f9db724a81ba78f5d037f1cae79c5a07107c8e/LICENSE>`__
  `libevent <https://libevent.org>`__, `62c152d <https://github.com/libevent/libevent/tree/62c152d9a7cd264b993dad730c4163c6ede2e0a3>`__, 2020-07-28, `cpe:2.3:a:libevent_project:libevent:* <https://nvd.nist.gov/vuln/search/results?form_type=Advanced&results_type=overview&query=cpe%3A2.3%3Aa%3Alibevent_project%3Alibevent%3A%2A&search_type=all>`__, `BSD-3-Clause <https://github.com/libevent/libevent/blob/62c152d9a7cd264b993dad730c4163c6ede2e0a3/LICENSE>`__
  `liburing <https://github.com/axboe/liburing>`__, `2.3 <https://github.com/axboe/liburing/releases/tag/liburing-2.3>`__, 2022-10-26, , 
  `Nghttp2 <https://nghttp2.org>`__, `1.58.0 <https://github.com/nghttp2/nghttp2/releases/tag/v1.58.0>`__, 2023-10-27, `cpe:2.3:a:nghttp2:nghttp2:* <https://nvd.nist.gov/vuln/search/results?form_type=Advanced&results_type=overview&query=cpe%3A2.3%3Aa%3Anghttp2%3Anghttp2%3A%2A&search_type=all>`__, `MIT <https://github.com/nghttp2/nghttp2/blob/v1.58.0/LICENSE>`__
  `nlohmann JSON <https://nlohmann.github.io/json>`__, `3.11.3 <https://github.com/nlohmann/json/releases/tag/v3.11.3>`__, 2023-11-28, `cpe:2.3:a:json-for-modern-cpp_project:json-for-modern-cpp:* <https://nvd.nist.gov/vuln/search/results?form_type=Advanced&results_type=overview&query=cpe%3A2.3%3Aa%3Ajson-for-modern-cpp_project%3Ajson-for-modern-cpp%3A%2A&search_type=all>`__, `MIT <https://github.com/nlohmann/json/blob/v3.11.3/LICENSE.MIT>`__
  `Perfetto <https://perfetto.dev/>`__, `40.0 <https://github.com/google/perfetto/releases/tag/v40.0>`__, 2023-12-05, , `Apache-2.0 <https://github.com/google/perfetto/blob/v40.0/LICENSE>`__
  `Protocol Buffers <https://developers.google.com/protocol-buffers>`__, `23.4 <https://github.com/protocolbuffers/protobuf/releases/tag/v23.4>`__, 2023-07-06, `cpe:2.3:a:google:protobuf:* <https://nvd.nist.gov/vuln/search/results?form_type=Advanced&results_type=overview&query=cpe%3A2.3%3Aa%3Agoogle%3Aprotobuf%3A%2A&search_type=all>`__, `Protocol Buffers <https://github.com/protocolbuffers/protobuf/blob/v23.4/LICENSE>`__
  `Protocol Buffers (protoc) linux_aarch_64 <https://developers.google.com/protocol-buffers>`__, `23.4 <https://github.com/protocolbuffers/protobuf/releases/tag/v23.4>`__, 2023-07-06, , `Protocol Buffers <https://github.com/protocolbuffers/protobuf/blob/v23.4/LICENSE>`__
  `Protocol Buffers (protoc) linux_x86_64 <https://developers.google.com/protocol-buffers>`__, `23.4 <https://github.com/protocolbuffers/protobuf/releases/tag/v23.4>`__, 2023-07-06, , `Protocol Buffers <https://github.com/protocolbuffers/protobuf/blob/v23.4/LICENSE>`__
  `Protocol Buffers (protoc) osx_aarch_64 <https://developers.google.com/protocol-buffers>`__, `23.4 <https://github.com/protocolbuffers/protobuf/releases/tag/v23.4>`__, 2023-07-06, , `Protocol Buffers <https://github.com/protocolbuffers/protobuf/blob/v23.4/LICENSE>`__
  `Protocol Buffers (protoc) osx_x86_64 <https://developers.google.com/protocol-buffers>`__, `23.4 <https://github.com/protocolbuffers/protobuf/releases/tag/v23.4>`__, 2023-07-06, , `Protocol Buffers <https://github.com/protocolbuffers/protobuf/blob/v23.4/LICENSE>`__
  `Protocol Buffers (protoc) win64 <https://developers.google.com/protocol-buffers>`__, `23.4 <https://github.com/protocolbuffers/protobuf/releases/tag/v23.4>`__, 2023-07-06, , `Protocol Buffers <https://github.com/protocolbuffers/protobuf/blob/v23.4/LICENSE>`__
  `QUICHE <https://github.com/google/quiche>`__, `83a9e81 <https://github.com/google/quiche/tree/83a9e81296b36898025bce1110db9f9c4f23afd3>`__, 2024-01-12, , `BSD-3-Clause <https://github.com/google/quiche/blob/83a9e81296b36898025bce1110db9f9c4f23afd3/LICENSE>`__
  `RE2 <https://github.com/google/re2>`__, `2023-11-01 <https://github.com/google/re2/releases/tag/2023-11-01>`__, 2023-10-31, , `BSD-3-Clause <https://github.com/google/re2/blob/2023-11-01/LICENSE>`__
  `Rules for using foreign build systems in Bazel <https://github.com/bazelbuild/rules_foreign_cc>`__, `0.9.0 <https://github.com/bazelbuild/rules_foreign_cc/releases/tag/0.9.0>`__, 2022-08-02, , `Apache-2.0 <https://github.com/bazelbuild/rules_foreign_cc/blob/0.9.0/LICENSE>`__
  `rules_license <https://github.com/bazelbuild/rules_license>`__, `0.0.7 <https://github.com/bazelbuild/rules_license/releases/tag/0.0.7>`__, 2023-06-16, , `Apache-2.0 <https://github.com/bazelbuild/rules_license/blob/0.0.7/LICENSE>`__
  `spdlog <https://github.com/gabime/spdlog>`__, `1.12.0 <https://github.com/gabime/spdlog/releases/tag/v1.12.0>`__, 2023-07-08, , `MIT <https://github.com/gabime/spdlog/blob/v1.12.0/LICENSE>`__
  `tcmalloc <https://github.com/google/tcmalloc>`__, `e33c7bc <https://github.com/google/tcmalloc/tree/e33c7bc60415127c104006d3301c96902f98d42a>`__, 2022-10-24, , `Apache-2.0 <https://github.com/google/tcmalloc/blob/e33c7bc60415127c104006d3301c96902f98d42a/LICENSE>`__
  `utf8_range <https://github.com/protocolbuffers/utf8_range>`__, `d863bc3 <https://github.com/protocolbuffers/utf8_range/tree/d863bc33e15cba6d873c878dcca9e6fe52b2f8cb>`__, 2023-05-26, , `MIT <https://github.com/protocolbuffers/utf8_range/blob/d863bc33e15cba6d873c878dcca9e6fe52b2f8cb/LICENSE>`__
  `xxHash <https://github.com/Cyan4973/xxHash>`__, `0.8.2 <https://github.com/Cyan4973/xxHash/releases/tag/v0.8.2>`__, 2023-07-21, , `BSD-2-Clause <https://github.com/Cyan4973/xxHash/blob/v0.8.2/LICENSE>`__
  `yaml-cpp <https://github.com/jbeder/yaml-cpp>`__, `0.8.0 <https://github.com/jbeder/yaml-cpp/releases/tag/0.8.0>`__, 2023-08-10, `cpe:2.3:a:yaml-cpp_project:yaml-cpp:* <https://nvd.nist.gov/vuln/search/results?form_type=Advanced&results_type=overview&query=cpe%3A2.3%3Aa%3Ayaml-cpp_project%3Ayaml-cpp%3A%2A&search_type=all>`__, `MIT <https://github.com/jbeder/yaml-cpp/blob/0.8.0/LICENSE>`__
  `zlib <https://zlib.net>`__, `1.2.13 <https://github.com/madler/zlib/releases/tag/v1.2.13>`__, 2022-10-14, `cpe:2.3:a:gnu:zlib:* <https://nvd.nist.gov/vuln/search/results?form_type=Advanced&results_type=overview&query=cpe%3A2.3%3Aa%3Agnu%3Azlib%3A%2A&search_type=all>`__, `zlib <https://github.com/madler/zlib/blob/v1.2.13/zlib.h>`__
  `zlib-ng <https://github.com/zlib-ng/zlib-ng>`__, `2.0.7 <https://github.com/zlib-ng/zlib-ng/releases/tag/2.0.7>`__, 2023-03-17, , `zlib <https://github.com/zlib-ng/zlib-ng/blob/2.0.7/LICENSE.md>`__


envoy.wasm.runtime.wasmtime
---------------------------

.. csv-table::
  :header: Name, Version, Release date, CPE, License
  :widths: 2, 1, 1, 2, 1

  `Bazel rust rules <https://github.com/bazelbuild/rules_rust>`__, `0.35.0 <https://github.com/bazelbuild/rules_rust/releases/tag/0.35.0>`__, 2023-12-27, , `Apache-2.0 <https://github.com/bazelbuild/rules_rust/blob/0.35.0/LICENSE.txt>`__

